# texty

./: Cargo.toml
examples/: main.rs
src/: lib.rs  textbox.rs
src/textbox/: drawable.rs  editor.rs  update.rs
